Update Tests to Junit5 Framework and removed some unnecessary test dependencies (#589)